fix: fixed cie_mix behavior to align with Less native mix; test: improved less mocks

--- a/tests/mocks/input.less
+++ b/tests/mocks/input.less
@@ -33,7 +33,11 @@
 }
 
 .text-mix2 {
-    color: cie_mix(@base-color, #f00, 0.33);
+    color: cie_mix(@base-color, #f00, 67%);
+}
+
+.text-mix3 {
+    color: cie_mix(#747474, #ef9b00, 99%);
 }
 
 .text-combined {
