--- a/tests/mocks/output.css
+++ b/tests/mocks/output.css
@@ -20,10 +20,13 @@
   color: #50a253;
 }
 .text-mix1 {
-  color: #a97f9f;
+  color: #dc5c56;
 }
 .text-mix2 {
   color: #a97f9f;
+}
+.text-mix3 {
+  color: #757473;
 }
 .text-combined {
   color: #466490;
